tests/samples/expression-invalid-5/template.blate
// error: empty []
        { (na9me_.a().pm["[]"][]["mop'op"].mm(4.258,'oplm').tty + 9  + (mmo[0))}
